syntax = "proto3";

package org.bigbluebutton.protos;

option go_package = "/common";

message ErrorResponse {
  string key = 1;
  string message = 2;
}