syntax = "proto3";

package org.bigbluebutton.protos;

message MeetingRunningReq {
  string meetingId = 1;
}

message MeetingRunningResp {
  bool isRunning = 1;
}

message MeetingInfoReq {
  string meetingId = 1;
}

message MeetingInfoResp {

}

message MeetingsReq {

}

message MeetingsResp {

}

service MeetingService {
  rpc isMeetingRunning(MeetingRunningReq) returns (MeetingRunningResp);
  rpc getMeetingInfo(MeetingInfoReq) returns (MeetingInfoResp);
  rpc getMeetings(MeetingsReq) returns (MeetingsResp);
}